<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Activity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/main"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="-70dp"
        android:alpha="0.8"
        android:src="#A2E6DF" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="-62dp"
        android:alpha="0.8"
        android:src="#A2E6DF" />

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/mentor_me" />


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/login_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:orientation="vertical"
        android:background="@drawable/blue_box">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="Login"
            android:textColor="@android:color/white"
            android:background="#50C2C9"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_marginLeft="25dp"/>

        <TextView
            android:id="@+id/login_text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Email"
            android:textColor="@android:color/white"
            android:background="#50C2C9"
            android:textSize="15sp"
            android:layout_marginLeft="25dp"/>

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="25dp"
            android:background="@drawable/white_box"
            android:hint="Enter Email"
            android:textColorHint="#918B8B"
            android:paddingLeft="20dp"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:backgroundTint="#FFFFFF" />

        <TextView
            android:id="@+id/pass_text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Password"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_marginLeft="25dp"/>

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="25dp"
            android:background="@drawable/white_box"
            android:hint="Enter your password"
            android:textColorHint="#918B8B"
            android:paddingLeft="20dp"
            android:textColor="#FFFFFF"
            android:inputType="textPassword"
            android:backgroundTint="#FFFFFF" />

        <TextView
            android:id="@+id/forgot_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Your Password ?"
            android:textColor="@android:color/white"
            android:layout_marginTop="7dp"
            android:textSize="12sp"
            android:layout_alignRight="@id/Password"
            android:layout_marginLeft="25dp"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:text="Login"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="#50C2C9"
            android:background="@drawable/white_box" />

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="17dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot Your Password ?"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_marginLeft="100dp"/>

            <TextView
                android:id="@+id/sign_up_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="#157177"
                android:textSize="14sp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>

