...
    android:layout_height="match_parent"
    android:background="#DEF8F8"
    tools:context=".Book_Session_Activity">


    <LinearLayout
        android:id="@+id/search_div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/blue_box">

        <LinearLayout
...
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/call_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/call_icon"
                android:layout_marginTop="60dp"
                />

            <TextView
                android:id="@+id/video_call_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/video_icon_white"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"/>
...
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="John Cooper"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
...
