...
                android:backgroundTint="#FFFFFF" />


            <!-- Repeat similar blocks for other fields -->

            <Button
                android:id="@+id/Sign_up_btn"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="110dp"
                android:text="Sign Up"
                android:textStyle="bold"
                android:textColor="#50C2C9"
                android:background="@drawable/white_box"/>

            <LinearLayout
                android:layout_width="wrap_content"
...
